--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {	
 	"prefix": "multi", 
 	"defaultSessionName": "bot", 
-	"zeksKey": "ahYu2TuRJ1dFCwzKxhWWzmnRbvN",
+	"zeksKey": "apivinz",
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 300,
-	"ownerList": ["917736716373@s.whatsapp.net", "9072716373@s.whatsapp.net"],
+	"ownerList": ["6235989299@s.whatsapp.net", "6235989299@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://api.zeks.me/logo.jpg",
 	"pack": "Lua",
