--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
 	"maxLimit": 30,
 	"ownerList": ["917xxxxxx@s.whatsapp.net", "919xxxxxx@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
-    "imgUrl": "https://api.zeks.me/logo.jpg",
+    "imgUrl": "https://i.ibb.co/HtMFLVf/20210328-021346.jpg",
 	"pack": "lua",
 	"author": "cheia🎀"
 }
