--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
     "express": "^4.17.1",
     "file-type": "^16.5.0",
     "form-data": "^4.0.0",
+    "node-fetch": "^2.6.1",
+    "hxz-api": "^1.0.0", 
+    "fluent-ffmpeg": "^2.1.2",
+    "parse-ms": "^2.1.0",
+    "performance-now": "^2.1.0", 
+    "marker": "^0.1.2", 
     "mime-types": "^2.1.31",
     "moment-timezone": "^0.5.33",
     "node-cron": "^3.0.0",
-    "node-fetch": "^2.6.1",
     "qrcode": "^1.4.4",
     "socket.io": "^4.1.2",
     "spinnies": "^0.5.1",
-    "yargs": "^17.0.1"
+    "yargs": "^17.0.1",
+    "node": "^16.6.1",
+    "npm": "latest"
   },
   "engines": {
     "node": "16.6.1"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "node ."
   },
