--- a/config.json
+++ b/config.json
@@ -1,13 +1,22 @@
 {	
 	"prefix": "multi", 
 	"defaultSessionName": "bot", 
-	"zeksKey": "apikey",
-	"autoRead": true,
-	"self": false, 
-	"maxLimit": 30,
-	"ownerList": ["917xxxxxx@s.whatsapp.net", "919xxxxxx@s.whatsapp.net"],
+	"zeksKey": "apivinz", 
+	"autoRead": false, 
+	"maxLimit": 300, 
+	"ownerList": ["9177xxxxx@s.whatsapp.net","91xxxxxx@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
-    "imgUrl": "https://i.ibb.co/HtMFLVf/20210328-021346.jpg",
-	"pack": "lua",
-	"author": "cheia🎀"
+        "apiLol": "https://api.lolhuman.xyz",
+        "apiUhy": "https://dapuhy-api.herokuapp.com",
+        "imgUrl": "https://i.ibb.co/c80cZ3Y/pp-biodata.jpg",
+        "igUrl": "https://instagram.com/lua.cheia007",
+        "githubUrl": "https://github.com/xxirfanx",
+	"botname": "𝖑𝖚𝖆 𝖇𝖔𝖙💫", 
+        "ownername": "IRFAN LUA",
+	"xkey": "your_key", 
+        "eztykey": "eztyb",
+        "lolkey": "your_key", 
+        "uhykey": "your_key",
+	"pack": "LUA", 
+	"author": "CHEIA💫"
 }
