--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	"apiUrl": "https://api.zeks.me",
         "apiLol": "https://api.lolhuman.xyz",
         "apiUhy": "https://dapuhy-api.herokuapp.com",
-        "imgUrl": "https://i.ibb.co/c80cZ3Y/pp-biodata.jpg",
+        "imgUrl": "https://i.ibb.co/MfN5zC4/images.jpg",
         "igUrl": "https://instagram.com/lua.cheia007",
         "githubUrl": "https://github.com/xxirfanx",
 	"botname": "𝖑𝖚𝖆 𝖇𝖔𝖙💫", 
