--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "Lua bot",
   "description": "whatsapp bot build by lua cheia",
   "repository": "https://github.com/xxirfanx/luabot",
-  "logo": "https://api.zeks.xyz/logo.jpg",
+  "logo": "https://i.ibb.co/MfN5zC4/images.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"]
 }
