--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {	
 	"prefix": "multi", 
 	"defaultSessionName": "bot", 
-	"zeksKey": "apivinz", 
+	"zeksKey": "GQI75CX9rhxwVBWcCRrmnY3aBCr", 
 	"autoRead": false, 
 	"maxLimit": 300, 
 	"ownerList": ["9177xxxxx@s.whatsapp.net","91xxxxxx@s.whatsapp.net"],
@@ -11,12 +11,12 @@
         "imgUrl": "https://i.ibb.co/MfN5zC4/images.jpg",
         "igUrl": "https://instagram.com/lua.cheia007",
         "githubUrl": "https://github.com/xxirfanx",
-	"botname": "𝖑𝖚𝖆 𝖇𝖔𝖙💫", 
-        "ownername": "IRFAN LUA",
+	"botname": "moon 𝖇𝖔𝖙💫", 
+        "ownername": "S1CKC3LL",
 	"xkey": "your_key", 
         "eztykey": "eztyb",
         "lolkey": "your_key", 
         "uhykey": "your_key",
-	"pack": "LUA", 
-	"author": "CHEIA💫"
+	"pack": "L", 
+	"author": "C💫"
 }
